button inverted added

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               </p>
             </div>
             <div>
-              <button class="button" data-tyep="inverted">Get Started</button>
+              <button class="button" data-type="inverted">Get Started</button>
             </div>
           </div>
         </div>
